# Ollama-Local

./: .gitignore  CHANGELOG.md  README.md  llama3-pdf-local.py  llama3-sql-local.py  prompt.py  pyproject.toml
vectorstore/: chroma.sqlite3
